# verifiable-tool-invocation-flow

./: .env.example  .gitignore  COMMERCIAL_SUPPORT.md  LICENSE  README.md  SUPPORT.md  pyproject.toml
docs/: announcement_pack.md  architecture.md  fdo_dataspace_mapping.md  feedback_tracking.md  integration_guide.md  marketplace_submission_note.md  public_landing_note.md  security_assumptions.md  threat_model.md
docs/forum_posts/: crewai_forum_post.md
examples/: input_request.json  policy_snapshot.json  tool_manifest.json  tool_output.json
schemas/: execution_receipt.schema.json  verification_report.schema.json
src/verifiable_tool_invocation_flow/: __init__.py  canonical.py  guarded_tool_call.py  hashing.py  main.py  models.py  policy_checker.py  receipt_builder.py  resources.py  signer.py  validator.py
src/verifiable_tool_invocation_flow/examples/: input_request.json  policy_snapshot.json  tool_input.json  tool_output.json
src/verifiable_tool_invocation_flow/flows/: __init__.py  secure_tool_invocation_flow.py
src/verifiable_tool_invocation_flow/schemas/: verification_report.schema.json
src/verifiable_tool_invocation_flow/tools/: __init__.py  demo_metadata_lookup_tool.py
tests/: test_canonical_json.py  test_flow_wrapper.py  test_guarded_tool_call.py  test_hashing.py  test_policy_denied.py  test_receipt_builder.py  test_replay_protection.py  test_signature.py  test_validator_tampered.py  test_validator_valid.py
