[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "verifiable-tool-invocation-flow"
version = "0.1.0"
description = "Reusable primitives for verifiable CrewAI tool invocation flows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "BIN Zhang" }
]
dependencies = [
  "cryptography>=42.0",
  "pydantic>=2.7",
]

[project.optional-dependencies]
test = [
  "jsonschema>=4.0",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
