[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "verifiable-tool-invocation-flow"
version = "0.1.0"
description = "Reusable primitives for verifiable CrewAI tool invocation flows."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
  { name = "BIN Zhang" }
]
dependencies = [
  "crewai>=0.103.0",
  "cryptography>=42.0",
  "jsonschema>=4.0",
  "pydantic>=2.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
kickoff = "verifiable_tool_invocation_flow.main:kickoff_cli"
plot = "verifiable_tool_invocation_flow.main:plot_cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.crewai]
type = "flow"
