[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "verifiable-tool-invocation-flow"
version = "0.1.1"
description = "CrewAI Flow template for signed tool invocation receipts and independent validation."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "BIN Zhang" }
]
dependencies = [
  "crewai>=0.103.0",
  "cryptography>=42.0",
  "jsonschema>=4.0",
  "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/joy7758/verifiable-tool-invocation-flow"
Repository = "https://github.com/joy7758/verifiable-tool-invocation-flow"
Issues = "https://github.com/joy7758/verifiable-tool-invocation-flow/issues"
Documentation = "https://github.com/joy7758/verifiable-tool-invocation-flow/tree/main/docs"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
kickoff = "verifiable_tool_invocation_flow.main:kickoff_cli"
plot = "verifiable_tool_invocation_flow.main:plot_cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
verifiable_tool_invocation_flow = ["examples/*.json", "schemas/*.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.crewai]
type = "flow"
